implements graphing and default cards

--- a/src/client/scss/custom.scss
+++ b/src/client/scss/custom.scss
@@ -5,7 +5,8 @@ div.scroll-menu {
 
 div.scroll-menu .scroll-menu-item {
   display: inline-flex;
-  margin-left: 1em;
+  margin-right: 1em;
+  margin-left: 0.5em;
 }
 
 .calendar {
@@ -13,7 +14,7 @@ div.scroll-menu .scroll-menu-item {
   -moz-border-radius: 2px;
   border-radius: 2px;
   border-style: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 7.5px;
 }
 
 .react-calendar__tile.active {
