--- a/src/client/scss/custom.scss
+++ b/src/client/scss/custom.scss
@@ -37,12 +37,11 @@ div.scroll-menu .scroll-menu-item {
 }
 
 .eq-col-container {
-  display: flex;
   height: 385px;
 }
 
 .eq-col {
-  flex: 1;
+  height: 385px;
 }
 
 .calendar {
@@ -50,7 +49,6 @@ div.scroll-menu .scroll-menu-item {
   -moz-border-radius: 2px;
   border-radius: 2px;
   border-style: none;
-  margin-top: 7.5px;
 }
 
 .gym-day:not(.react-calendar__tile--active) {
