cleans up and refactors workouts -> exercises

--- a/src/client/scss/custom.scss
+++ b/src/client/scss/custom.scss
@@ -18,6 +18,10 @@
     background: #555;
 }
 
+.small {
+  font-size: medium;
+}
+
 div.scroll-menu {
   overflow-x: scroll;
   white-space: nowrap;
